force-app/main/default/objects/Engagement_Sector__c/Engagement_Sector__c.object-meta.xml
<CustomObject>
    <label>Engagement Sector</label>
    <nameField>
        <displayFormat>ES-{000000}</displayFormat>
        <label>Engagement Sector</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Sectors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>