force-app/main/default/objects/Engagement_Sector__c/fields/Secondary_Sector__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sector__c</fullName>
    <formula>Coverage_Sector_Dependency__r.SecondarySector__r.Value__c</formula>
    <label>Secondary Sector</label>
    <type>Text</type>
</CustomField>